--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,11 +1,22 @@
 name: getBranchName
-on: [pull_request, push]
+on: [pull_request, push, create]
 
 jobs:
   which_branch:
     runs-on: ubuntu-latest
     steps:
       # extract branch name
-      - name: start release or hotfix version bump
-        id: start
-        run: ./.github/env.sh
+      - name: Extract branch name
+        if: github.event_name != 'pull_request'
+        shell: bash
+        run: echo ${GITHUB_REF#refs/heads/}
+        id: extract_branch
+
+      # extract branch name on pull request
+      - name: Print branch name
+        if: github.event_name == 'pull_request'
+        run: echo ${GITHUB_HEAD_REF}
+
+      # print branch name
+      - name: Get branch name
+        run: echo 'The branch name is' $BRANCH_NAME
