--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,6 +5,7 @@ jobs:
   which_branch:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       # extract branch name
       - name: Extract branch name
         if: github.event_name != 'pull_request'
@@ -20,3 +21,6 @@ jobs:
       # print branch name
       - name: Get branch name
         run: echo 'The branch name is' $BRANCH_NAME
+      
+      - name: Trigger script
+        run: .github/env.sh
